sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:13: error: value -- is not a member of Int
    fin--;
       ^AlgCocktailSort2:20: error: value ++ is not a member of Int
    debut++
         ^